[workspace]
resolver = "3"
members = [
    "crates/*",
    "py-radiate",

    "examples/DTLZ",
    "examples/min-sum",
    "examples/hello-world",
    "examples/knapsack",    
    "examples/nqueens",
    "examples/simple-nn",
    "examples/TSP",
    "examples/rastrigin",
    "examples/rosenbrock",

    "examples/graphs/iris-graph",
    "examples/graphs/regression-graph",
    "examples/graphs/xor-graph",
    "examples/graphs/simple-memory-graph",

    "examples/trees/regression-tree",
    "examples/trees/iris-tree",

    "examples/image-evo",
]
default-members = [
    "crates/*"
]
exclude = [
    "examples/min-sum",
    "examples/hello-world",
    "examples/knapsack",    
    "examples/nqueens",
    "examples/simple-nn",
    "examples/TSP",
    "examples/DTLZ",
    "examples/rastrigin",
    "examples/rosenbrock",

    "examples/graphs/iris-graph",
    "examples/graphs/xor-graph",
    "examples/graphs/regression-graph",
    "examples/graphs/simple-memory-graph",

    "examples/trees/regression-tree",
    "examples/trees/iris-tree",
    
    "examples/image-evo",
]

[workspace.package]
version = "1.2.16"
edition = "2024"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "A Rust library for genetic algorithms and artificial evolution."
repository = "https://github.com/pkalivas/radiate"
readme = "README.md"
categories = ["science", "simulation", "algorithms"]
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = "MIT"
homepage = "https://pkalivas.github.io/radiate/"

[workspace.dependencies]
rand = "0.9.2"
pyo3 = "0.26.0"
numpy ="0.26.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
radiate = { version = "1.2.16", path = "crates/radiate", default-features = false }
radiate-core = { version = "1.2.16", path = "crates/radiate-core", default-features = false }
radiate-alters = { version = "1.2.16", path = "crates/radiate-alters", default-features = false }
radiate-selectors = { version = "1.2.16", path = "crates/radiate-selectors", default-features = false }
radiate-engines = { version = "1.2.16", path = "crates/radiate-engines", default-features = false }
radiate-gp = { version = "1.2.16", path = "crates/radiate-gp", default-features = false }
radiate-error = { version = "1.2.16", path = "crates/radiate-error", default-features = false }
radiate-python = { version = "1.2.16", path = "crates/radiate-python", default-features = false }

