[workspace]
resolver = "3"
members = [
    "crates/*",
    "py-radiate",

    "examples/DTLZ",
    "examples/min-sum",
    "examples/hello-world",
    "examples/knapsack",    
    "examples/nqueens",
    "examples/simple-nn",
    "examples/TSP",
    "examples/rastrigin",
    "examples/rosenbrock",
    "examples/image-evo",
    "examples/novelty_search",
    "examples/snake",

    "examples/graphs/iris-graph",
    "examples/graphs/regression-graph",
    "examples/graphs/xor-graph",
    "examples/graphs/simple-memory-graph",

    "examples/trees/regression-tree",
    "examples/trees/iris-tree",
]
default-members = [
    "crates/*"
]
exclude = [
    "examples/min-sum",
    "examples/hello-world",
    "examples/knapsack",    
    "examples/nqueens",
    "examples/simple-nn",
    "examples/TSP",
    "examples/DTLZ",
    "examples/rastrigin",
    "examples/rosenbrock",
    "examples/image-evo",
    "examples/novelty_search",
    "examples/snake",

    "examples/graphs/iris-graph",
    "examples/graphs/xor-graph",
    "examples/graphs/regression-graph",
    "examples/graphs/simple-memory-graph",

    "examples/trees/regression-tree",
    "examples/trees/iris-tree",    
]

[workspace.package]
version = "1.2.20"
edition = "2024"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "A Rust library for genetic algorithms and artificial evolution."
repository = "https://github.com/pkalivas/radiate"
readme = "README.md"
categories = ["science", "simulation", "algorithms"]
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = "MIT"
homepage = "https://pkalivas.github.io/radiate/"

[workspace.dependencies]
rand = "0.9.2"
pyo3 = "0.27.2"
numpy ="0.27.1"
rayon = "1.11.0"
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149" }
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
chrono-tz = "0.10"
compact_str = { version = "0.9.0" }
regex = "1.12.2"
foldhash = "0.2.0"
slotmap = "1.0"
hashbrown = { version = "0.16.1" }
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
tui-piechart = "0.2.8"
color-eyre = "0.6.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
radiate = { version = "1.2.20", path = "crates/radiate", default-features = false }
radiate-core = { version = "1.2.20", path = "crates/radiate-core", default-features = false }
radiate-alters = { version = "1.2.20", path = "crates/radiate-alters", default-features = false }
radiate-selectors = { version = "1.2.20", path = "crates/radiate-selectors", default-features = false }
radiate-engines = { version = "1.2.20", path = "crates/radiate-engines", default-features = false }
radiate-gp = { version = "1.2.20", path = "crates/radiate-gp", default-features = false }
radiate-error = { version = "1.2.20", path = "crates/radiate-error", default-features = false }
radiate-python = { version = "1.2.20", path = "crates/radiate-python", default-features = false }
radiate-utils = { version = "1.2.20", path = "crates/radiate-utils", default-features = false }
radiate-ui = { version = "1.2.20", path = "crates/radiate-ui", default-features = false }
