[workspace]
resolver = "3"
members = [
    "crates/*",
    "py-radiate",

    "examples/rust/DTLZ",
    "examples/rust/min-sum",
    "examples/rust/hello-world",
    "examples/rust/knapsack",    
    "examples/rust/nqueens",
    "examples/rust/simple-nn",
    "examples/rust/TSP",
    "examples/rust/rastrigin",
    "examples/rust/rosenbrock",
    "examples/rust/image-evo",
    "examples/rust/novelty_search",
    "examples/rust/snake",

    "examples/rust/graphs/iris-graph",
    "examples/rust/graphs/regression-graph",
    "examples/rust/graphs/xor-graph",
    "examples/rust/graphs/simple-memory-graph",

    "examples/rust/trees/regression-tree",
    "examples/rust/trees/iris-tree", 
    "examples/rust/pgm",
]
default-members = [
    "crates/*"
]
exclude = [
    "examples/rust/min-sum",
    "examples/rust/hello-world",
    "examples/rust/knapsack",    
    "examples/rust/nqueens",
    "examples/rust/simple-nn",
    "examples/rust/TSP",
    "examples/rust/DTLZ",
    "examples/rust/rastrigin",
    "examples/rust/rosenbrock",
    "examples/rust/image-evo",
    "examples/rust/novelty_search",
    "examples/rust/snake",

    "examples/rust/graphs/iris-graph",
    "examples/rust/graphs/xor-graph",
    "examples/rust/graphs/regression-graph",
    "examples/rust/graphs/simple-memory-graph",

    "examples/rust/trees/regression-tree",
    "examples/rust/trees/iris-tree",    
    "examples/rust/pgm",
]

[workspace.package]
version = "1.2.21"
edition = "2024"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "A Rust library for genetic algorithms and artificial evolution."
repository = "https://github.com/pkalivas/radiate"
readme = "README.md"
categories = ["science", "simulation", "algorithms"]
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = "MIT"
homepage = "https://pkalivas.github.io/radiate/"

[workspace.dependencies]
rand = "0.10.0"
pyo3 = "0.28.2"
numpy ="0.28.0"
rayon = "1.11.0"
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149" }
compact_str = { version = "0.9.0" }
foldhash = "0.2.0"
slotmap = "1.0"
hashbrown = { version = "0.16.1" }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
tui-piechart = "0.3.1"
color-eyre = "0.6.3"
num-traits = "0.2.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
radiate = { version = "1.2.21", path = "crates/radiate", default-features = false }
radiate-core = { version = "1.2.21", path = "crates/radiate-core", default-features = false }
radiate-alters = { version = "1.2.21", path = "crates/radiate-alters", default-features = false }
radiate-selectors = { version = "1.2.21", path = "crates/radiate-selectors", default-features = false }
radiate-engines = { version = "1.2.21", path = "crates/radiate-engines", default-features = false }
radiate-gp = { version = "1.2.21", path = "crates/radiate-gp", default-features = false }
radiate-error = { version = "1.2.21", path = "crates/radiate-error", default-features = false }
radiate-python = { version = "1.2.21", path = "crates/radiate-python", default-features = false }
radiate-utils = { version = "1.2.21", path = "crates/radiate-utils", default-features = false }
radiate-ui = { version = "1.2.21", path = "crates/radiate-ui", default-features = false }
radiate-pgm = { version = "1.2.21", path = "crates/radiate-pgm", default-features = false }

