[package]
name = "py-radiate"
version = "0.0.2"
edition = "2024"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "radiate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38", "multiple-pymethods"] }
radiate-python = { workspace = true }

