[build-system]
requires = ["maturin>=1.8.4,<2.0"]
build-backend = "maturin"

[project]
name = "radiate"
description = "A fast and flexible evolution engine for implementing artificial evolution and genetic programming techniques."
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.13t",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.14t",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = []

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.maturin]
features = ["pyo3/extension-module"]

[[tool.mypy.overrides]]
module = ["radiate.*"]
warn_return_any = false

[tool.ruff]
line-length = 88
fix = true
