[build-system]
build-backend = "maturin"
requires = ["maturin>=1.8.4,<2.0"]

[project]
authors = [
  {name = "Peter Kalivas", email = "peterkalivas@gmail.com"},
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
description = "A fast and flexible evolution engine for implementing artificial evolution and genetic programming techniques."
dynamic = ["version"]
name = "radiate"
requires-python = ">=3.12"

[project.urls]
documentation = "https://pkalivas.github.io/radiate/"
repository = "https://github.com/pkalivas/radiate"

[project.optional-dependencies]
polars = ["polars>=1.38.1 ; python_version >= '3.12' and python_version < '3.14'"]
pandas = ["pandas>=2.1.0 ; python_version >= '3.12' and python_version < '3.14'"]
torch = ["torch>=2.7.1 ; python_version >= '3.12' and python_version < '3.14'"]
numba = ["numba>=0.55.1 ; python_version >= '3.12' and python_version < '3.14'"]
numpy = ["numpy>=2.4.3"]
matplotlib = ["matplotlib>=3.8.0"]
data =  ["polars","pandas","torch","numba"]
all = ["data", "numpy", "matplotlib"]

[tool.uv]
package = false

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pyright]
include = ["py-radiate/radiate", "py-radiate/tests", "py-radiate/examples"]

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py', '*_test.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = [
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=radiate",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "smoke: Smoke tests",
    "regression: Regression tests",
    "slow: Slow running tests",
    "benchmark: Benchmark tests",
    "skipif: Skip tests if condition is true"
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint.per-file-ignores]
"radiate/__init__.py" = ["F401"]
"radiate/utils/_normalize.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
