[package]
name = "radiate-extensions"
version = "0.1.1"
edition = "2021"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "Extensions for radiate. Genetic Programming implementations for graphs (neural networks) and regression analysis"
repository = "https://github.com/pkalivas/radiate"
readme = "../README.md"
categories = ["science", "simulation", "algorithms"]
keywords = ["search", "genetic", "learning", "artificial", "evolution"]
license = "MIT"
documentation = "https://pkalivas.github.io/radiate/"

[dependencies]
radiate = { path = "../radiate" }
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
num-traits = "0.2.19"