[package]
name = "radiate-gp"
version = "0.0.3"
edition = "2024"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "Extensions for radiate. Genetic Programming implementations for graphs (neural networks) and trees"
repository = "https://github.com/pkalivas/radiate"
readme = "../README.md"
categories = ["science", "simulation", "algorithms"]
keywords = ["search", "genetic", "learning", "artificial", "evolution"]
license = "MIT"
documentation = "https://pkalivas.github.io/radiate/"

[dependencies]
radiate = { version = "1.2.9"}
uuid = { version = "1.10.0", features = ["v4"] }

