[package]
name = "radiate"
version = "1.2.9"
edition = "2024"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "A Rust library for genetic algorithms and artificial evolution."
repository = "https://github.com/pkalivas/radiate"
readme = "../README.md"
categories = ["science", "simulation", "algorithms"]
keywords = ["search", "genetic", "learning", "artificial", "evolution"]
license = "MIT"
homepage = "https://pkalivas.github.io/radiate/"

[dependencies]
rand = "0.9.0"

[dev-dependencies]
rstest = "0.25.0"

[features]
gp = []