[package]
name = "radiate_matrix_tree"
version = "1.0.2"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "Matrix Tree model compatible with Radiate's evolutionary engine"
repository = "https://github.com/pkalivas/radiate"
readme = "README.md"
categories = ["science", "simulation", "algorithms", "evolve", "genetic"]
keywords = ["search", "genetic", "learning", "artificial", "evolution"]
edition = "2018"
license = "MIT"


[dependencies]
radiate={path="../radiate"}
rand="0.7.2"
simple-matrix = "0.1.2"
