[package]
name = "web"
description = "Web."
version = "1.0.0"
authors = ["pkalivas <peterkalivas@gmail.com>"]

[dependencies]
radiate={path="../radiate"}
rocket="0.4.2"
serde="1.0"
serde_json="1.0.44"
serde_derive="1.0.104"
serde_traitobject="0.2.4"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "json"]