[package]
name = "radiate-alters"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Alters - mutations and crossovers for the Radiate genetic algorithm library."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
radiate-core = { workspace = true }
num-traits = { workspace = true }
