[package]
name = "radiate-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Core traits and interfaces for the Radiate genetic algorithm library."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
rand = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[features]
serde = ["dep:serde"]