[package]
name = "radiate-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural derive macros for radiate (Freeze and friends)."
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
