[package]
name = "radiate-engines"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Engines for the Radiate genetic algorithm library."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
radiate-core = { workspace = true }
radiate-alters = { workspace = true }
radiate-selectors = { workspace = true }
radiate-error = { workspace = true }