[package]
name = "radiate-engines"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Engines for the Radiate genetic algorithm library."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
radiate-core = { workspace = true}
radiate-alters = { workspace = true }
radiate-selectors = { workspace = true }
radiate-error = { workspace = true }
radiate-utils = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
yaml_serde = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
rstest = "0.25.0"

[features]
default = []
rayon = [ "radiate-core/rayon" ]
serde = [ "dep:serde", "dep:serde_json", "dep:yaml_serde", "radiate-core/serde", "radiate-selectors/serde" ]
