[package]
name = "radiate-error"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Errors for the radiate genetic algorithm library"
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
pyo3 = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
backtrace = []
python = ["dep:pyo3"]
