[package]
name = "radiate-gp"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Extensions for radiate. Genetic Programming implementations for graphs (neural networks) and trees."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
radiate-core = { workspace = true }
radiate-utils = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }


[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
pgm = []
smallvec = ["radiate-utils/smallvec"]
