[package]
name = "radiate-object"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Extensions to Radiate to allow for any values to be evolved."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[features]
serde = ["dep:serde", "dep:serde_json"]
