[package]
name = "radiate-selectors"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Selection strategies for the Radiate genetic algorithm library."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
radiate-core = { workspace = true }
radiate-utils = { workspace = true }

serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "radiate-core/serde"]

[dev-dependencies]
rstest = "0.25.0"