[package]
name = "radiate-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
radiate-engines = { workspace = true }