[package]
name = "radiate"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "A Rust library for genetic algorithms and artificial evolution."
repository = { workspace = true }
readme = "../../README.md"
categories = { workspace = true }
keywords = ["simulation", "genetic", "learning", "artificial", "evolution"]
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
rand = { workspace = true }
radiate-core = { workspace = true }
radiate-alters = { workspace = true }
radiate-selectors = { workspace = true }
radiate-engines = { workspace = true }
radiate-gp = { workspace = true, optional = true }

[features]
default = []
gp = ["radiate-gp"]
serde = ["radiate-core/serde"]
